# nerolib

./: CMakeLists.txt  README.md  environment.yml  install.sh  pyproject.toml
cmake/modules/: console_bridgeConfig.cmake  urdfdomConfig.cmake  urdfdom_headersConfig.cmake
extra/: diag_raw_can.cpp  emergency_stop.cpp  resume_emergency_stop.cpp
include/: common.h  config.h  controller_base.h  nero_interface.h  socket_can.h  solver.h  utils.h
nerolib/: __init__.py  __init__.pyi  libNeroController.dylib
nerolib/test/: test_python_bindings.py
ruckig/: CMakeLists.txt
scripts/: extract_mjcf.py  scale_urdf_mass.py
src/: controller_base.cpp  nero_interface.cpp  nero_pybind.cpp  socket_can.cpp
test/: check_urdf_kinematics.py  grav_comp_hold.py  grav_comp_sim.py  gravity_fall_sim.py  test_compliant_control.cpp  test_gc_delivery.py  test_gravity_compensation.cpp  test_interface.cpp  test_motor_control.cpp  test_nero_controller.cpp  test_nerolib_api.py  test_ruckig.cpp  test_speed.py  tune_arm.py  verify_fk.cpp
urdf/: left_arm_final.urdf  nero_cone-e_left.urdf  nero_cone-e_left_fixed.urdf  nero_cone-e_left_scaled.urdf  nero_cone-e_right.urdf  nero_description.urdf  nero_no_gripper_description.urdf  nero_nyu_description.urdf  right_arm_final.urdf
